app/styles/main.css
@import url('flatly.css');

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

body {
  padding: 0;
  font-size: 13pt;
}

.inline-dropdown {
  display: inline;
}

.vert-center {
  margin-top: 10%;
  margin-bottom: 10%
}

.main p {
  font-size: 16pt;
}

.navbar-brand {
  font-family: 'Russo One', sans-serif;
  font-size: 26px;
  transition: color 0.1s;
}

.title {
  font-family: 'Russo One', sans-serif;
}

.tv {
  margin: 0px auto;
  background: url(/images/tvscreen.png);
  height: 645px;
  width: 993px;
  position: relative;
}

.screen {
  height: 450px;
  width: 800px;
  top: 76px;
  margin-left: 96px;
  background: #000000;
  position: absolute;
}

.remote {
  position: absolute;
  top: 50px;
  right: -85px;
}

.advisory {
  padding-top: 25px;
  margin: 0px;
}

#shane {
  position: absolute;
  color: #000;
  cursor: default;
}

.twire {
  color: #fff;
}

.popover {
  min-width: 220px;
}

.rotate-90 {
  -webkit-transform: rotate(7deg); /* Chrome, Safari, Opera */
    transform: rotate(7deg);
}

.advisory {
  width: 70%;
  margin: 0px auto;
  margin-top: 15px;
  text-shadow: 1px 1px 1px #333;
}

